# Soruce-Separation

./: .gitignore  .pre-commit-config.yaml  README.md  dataset.py  model.py  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  smoke.yaml
src/vocal_sep/: __init__.py  __main__.py  cli.py  config.py  device.py  log.py  paths.py
src/vocal_sep/audio/: spectrogram.py  wav.py
src/vocal_sep/data/: cache.py  dataset.py  index.py  loaders.py  musdb.py  pipeline.py
src/vocal_sep/evaluation/: metrics.py
src/vocal_sep/models/: unet.py
src/vocal_sep/training/: trainer.py
tests/: conftest.py  test_memmap_dataset.py  test_spectrogram.py  test_training_smoke.py  test_unet.py
