[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vocal-sep"
version = "0.2.0"
description = "U-Net vocal source separation on MUSDB18"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "musdb>=0.4",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "requests>=2.31",
    "soundfile>=0.12",
    "torch>=2.0",
    "rich>=13.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=7.0",
    "ruff>=0.11",
]

[project.scripts]
vocal-sep = "vocal_sep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
